@@ -13,7 +13,6 @@ dependencies {
 
 javafx {
     version = '22'
-
     modules = [
         'javafx.controls',
         'javafx.graphics'
@@ -21,7 +20,10 @@ javafx {
 }
 
 application {
-    mainClass.set('IsometricTemplateFX')
+    mainClass.set('com.example.gameoflife.IsometricTemplateFX')
+        applicationDefaultJvmArgs = [
+        '--enable-native-access=javafx.graphics'
+    ]
 }
 
 sourceSets {
